--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "jsx": "react",
     "noImplicitAny": true,
     "target": "es5",
-    "module": "es6",
+    "module": "ESNext",
     "moduleResolution": "node",
     "allowJs": true
   },
