--- a/package.json
+++ b/package.json
@@ -15,42 +15,44 @@
     "prod:analyze": "webpack --env.env=prod --env.addons=analyze --config config/webpack.config.js"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.0.0-1",
+    "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.0.6",
-    "image-webpack-loader": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.2.0",
+    "node-sass": "^4.8.3",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.7.2",
+    "typescript": "^2.8.3",
     "url-loader": "^1.0.1",
-    "webpack": "^4.1.0",
+    "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "@types/react": "^16.0.40",
+    "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.4",
-    "@types/react-router": "^4.0.22",
-    "@types/react-router-dom": "^4.2.4",
+    "@types/react-router": "^4.0.23",
+    "@types/react-router-dom": "^4.2.6",
     "moment": "^2.21.0",
     "node-sass": "^4.7.2",
-    "react": "^16.2.0",
+    "react": "^16.4.0",
     "react-dev-utils": "^6.0.0-next.47d2d941",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.3.1"
   }
 }
