--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prod": "npm run clean && webpack --env.env=prod --config config/webpack.config.js",
     "dev:addon": "webpack-dev-server --env.env=dev --env.addons=myplugin --config config/webpack.config.js  --open",
     "dev:analyze": "webpack-dev-server --env.env=dev --env.addons=analyze --config config/webpack.config.js",
-    "prod:analyze": "webpack --env.env=prod --env.addons=analyze --config config/webpack.config.js"
+    "prod:analyze": "webpack --env.env=prod --env.addons=analyze --config config/webpack.config.js",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -26,11 +28,15 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.2.0",
+    "install": "^0.12.1",
+    "jest": "^23.4.2",
     "node-sass": "^4.8.3",
+    "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
+    "ts-jest": "^23.0.1",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
     "typescript": "^2.8.3",
@@ -46,8 +52,10 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-test-renderer": "^16.0.1",
+    "jest-css-modules-transform": "^2.0.0",
     "moment": "^2.21.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "react": "^16.4.0",
     "react-dev-utils": "^6.0.0-next.47d2d941",
     "react-dom": "^16.4.0",
