--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "babel-plugin-import": "^1.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.0.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -35,6 +36,8 @@
     "install": "^0.12.1",
     "jest": "^23.4.2",
     "node-sass": "^4.8.3",
+    "postcss": "^7.0.2",
+    "postcss-loader": "^2.1.6",
     "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
@@ -43,11 +46,11 @@
     "ts-jest": "^23.0.1",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.8.3",
+    "typescript": "^3.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.15",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
   },
