--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "jest": "^23.4.2",
     "node-sass": "^4.8.3",
     "postcss": "^7.0.2",
-    "postcss-loader": "^2.1.6",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
     "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
+    "sugarss": "^2.0.0",
     "ts-jest": "^23.0.1",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
