--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
+    "postcss-scss": "^2.0.0",
     "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
