--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "@types/jest": "^23.3.1",
     "awesome-typescript-loader": "^5.0.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.2",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.2.0",
     "install": "^0.12.1",
@@ -45,7 +46,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.23.0",
     "sugarss": "^2.0.0",
     "ts-jest": "^23.0.1",
     "tslint": "^5.9.1",
@@ -53,7 +54,7 @@
     "typescript": "^3.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
@@ -67,11 +68,11 @@
     "jest-css-modules-transform": "^2.0.0",
     "moment": "^2.21.0",
     "node-sass": "^4.8.3",
-    "react": "^16.4.0",
-    "react-dev-utils": "^6.0.0-next.47d2d941",
-    "react-dom": "^16.4.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react": "^16.5.1",
+    "react-dev-utils": "^5.0.2",
+    "react-dom": "^16.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.3.1"
   }
 }
