--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-react": "^7.0.0",
     "@types/enzyme": "^3.1.12",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.3.1",
     "awesome-typescript-loader": "^5.0.0",
-    "babel-core": "^6.26.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.7.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
@@ -40,7 +40,7 @@
     "postcss": "^7.0.2",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^5.3.0",
+    "postcss-preset-env": "^6.0.10",
     "postcss-scss": "^2.0.0",
     "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
@@ -69,7 +69,7 @@
     "moment": "^2.21.0",
     "node-sass": "^4.8.3",
     "react": "^16.5.2",
-    "react-dev-utils": "^5.0.2",
+    "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
