--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cssnano": "^4.0.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-css-chunks-webpack-plugin": "^3.2.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.2.0",
