--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@types/enzyme": "^3.1.12",
     "@types/enzyme-adapter-react-16": "^1.0.2",
@@ -24,7 +26,6 @@
     "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.7.0",
-    "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.5",
