update to react 16.8.2 - with hooks ,  update packages , remove css-loader pathPublic option - not suported ...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es5",
     "module": "ESNext",
     "moduleResolution": "node",
+    "lib": ["es2018", "dom"],
     "allowJs": true
   },
   "files": [
