--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/enzyme": "^3.1.16",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^24.0.0",
-    "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.7.0",
     "copy-webpack-plugin": "^4.5.2",
@@ -44,36 +43,37 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "postcss-scss": "^2.0.0",
-    "react-test-renderer": "^16.8.1",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.23.0",
     "sugarss": "^2.0.0",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
-    "tslint-react": "^3.5.1",
-    "typescript": "^3.3.1",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.15.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.4.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.29.2",
-    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.2.0",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-dev-server": "^3.3.0",
+    "webpack-merge": "^4.2.1",
+    "ts-loader": "^5.3.3"
   },
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/react-test-renderer": "^16.8.0",
-    "jest-css-modules-transform": "^2.0.0",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.8.1",
+    "jest-css-modules-transform": "^2.1.1",
     "moment": "^2.24.0",
-    "react": "^16.8.1",
+    "react": "^16.8.6",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.5.3"
+    "react-router": "5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-transition-group": "^2.9.0"
   }
 }
