--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cssnano": "^4.1.8",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "extract-css-chunks-webpack-plugin": "^4.3.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -50,6 +51,7 @@
     "style-loader": "^0.23.0",
     "sugarss": "^2.0.0",
     "ts-jest": "^24.0.2",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.2",
@@ -58,8 +60,7 @@
     "webpack-bundle-analyzer": "^3.2.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.3.0",
-    "webpack-merge": "^4.2.1",
-    "ts-loader": "^5.3.3"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@types/react": "^16.8.13",
