--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "cssnano": "^4.1.8",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.6.0",
     "extract-css-chunks-webpack-plugin": "^4.3.0",
     "file-loader": "^3.0.1",
