--- a/package.json
+++ b/package.json
@@ -16,32 +16,32 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@types/enzyme": "^3.1.16",
+    "@types/enzyme": "^3.9.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
-    "@types/jest": "^24.0.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-import": "^1.7.0",
-    "copy-webpack-plugin": "^5.0.2",
+    "@types/jest": "^24.0.13",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.11.2",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-adapter-react-16": "^1.13.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "extract-css-chunks-webpack-plugin": "^4.3.0",
+    "extract-css-chunks-webpack-plugin": "^4.5.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "install": "^0.12.1",
-    "jest": "^24.1.0",
-    "node-sass": "^4.11.0",
-    "postcss": "^7.0.14",
+    "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
+    "postcss": "^7.0.16",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
@@ -53,30 +53,30 @@
     "style-loader": "^0.23.0",
     "sugarss": "^2.0.0",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.15.0",
+    "ts-loader": "^6.0.1",
+    "tslint": "^5.16.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.2",
+    "typescript": "^3.4.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.2.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.3.0",
+    "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router": "^4.4.5",
-    "@types/react-router-dom": "^4.3.1",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router": "5.0.1",
+    "@types/react-router-dom": "^4.3.3",
     "@types/react-test-renderer": "^16.8.1",
-    "jest-css-modules-transform": "^2.1.1",
+    "jest-css-modules-transform": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-dev-utils": "^8.0.0",
+    "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
-    "react-router": "5.0.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-transition-group": "^2.9.0"
+    "react-transition-group": "^4.0.1"
   }
 }
