--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "dependencies": {
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
-    "@types/react-router": "5.0.1",
+    "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-test-renderer": "^16.8.1",
     "jest-css-modules-transform": "^2.2.0",
