--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "image-webpack-loader": "^6.0.0",
     "install": "^0.13.0",
     "jest": "^24.8.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.16",
     "postcss-import": "^12.0.0",
