--- a/package.json
+++ b/package.json
@@ -11,72 +11,73 @@
     "start": "webpack-dev-server --env.env=dev --config config/webpack.config.js",
     "prod": "npm run clean && webpack --env.env=prod --config config/webpack.config.js",
     "dev:addon": "webpack-dev-server --env.env=dev --env.addons=myplugin --config config/webpack.config.js  --open",
+    "dev:addon-test": "webpack --env.env=dev --env.addons=myplugin --config config/webpack.config.js",
     "dev:analyze": "webpack-dev-server --env.env=dev --env.addons=analyze --config config/webpack.config.js",
     "prod:analyze": "webpack --env.env=prod --env.addons=analyze --config config/webpack.config.js",
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.0.0",
     "@types/enzyme": "^3.9.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^24.0.22",
     "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.11.2",
-    "copy-webpack-plugin": "^5.0.3",
+    "babel-plugin-import": "^1.12.2",
+    "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.8",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "extract-css-chunks-webpack-plugin": "^4.5.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "install": "^0.13.0",
     "jest": "^24.8.0",
-    "node-sass": "^4.12.0",
-    "postcss": "^7.0.16",
+    "node-sass": "^4.13.0",
+    "postcss": "^7.0.21",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "postcss-scss": "^2.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.11.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^1.0.0",
     "sugarss": "^2.0.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.1",
-    "tslint": "^5.16.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.32.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.2",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.5",
-    "@types/react-test-renderer": "^16.9.0",
-    "jest-css-modules-transform": "^2.5.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^5.1.2",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/react-test-renderer": "^16.9.1",
+    "jest-css-modules-transform": "^3.1.0",
     "moment": "^2.24.0",
-    "react": "^16.9.0",
-    "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react": "^16.11.0",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.11.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0"
   }
 }
